--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RevoU Bootcamp</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>RevoU ToDo-List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>Ini Ahmad Wildan</h2>
+    <div class="container">
+        <h1>Dashboard To-Do List</h1>
+        
+        <div class="input-section">
+            <input type="text" id="taskInput" placeholder="Add a todo...">
+            <input type="date" id="dateInput">
+            <button class="btn-add" onclick="addTask()">ADD</button>
+        </div>
+
+        <div class="filter-section">
+            <select class="filter-dropdown" onchange="filterTasks(this.value)">
+                <option value="all">FILTER</option>
+                <option value="pending">PENDING</option>
+                <option value="cancel">CANCELLED</option>
+                <option value="done">COMPLETED</option>
+            </select>
+            <button class="btn-delete-all" onclick="deleteAllTasks()">DELETE ALL</button>
+        </div>
+
+        <table class="task-table">
+            <thead>
+                <tr>
+                    <th>TASK</th>
+                    <th>DUE DATE</th>
+                    <th>STATUS</th>
+                    <th>ACTION</th>
+                </tr>
+            </thead>
+            <tbody id="taskTableBody">
+                <tr>
+                    <td colspan="4" class="empty-state">No Task Found</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <script src="/js/coba.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
